--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "react": "^17.0.1",
+    "react-color": "2.17.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "typescript": "^4.2.2",
     "web-vitals": "^1.1.0"
   },
@@ -39,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.168",
+    "@types/react-color": "^3.0.4"
   }
 }
